--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "name": "startbootstrap-grayscale",
     "version": "5.0.8",
     "scripts": {
-        "start": "node_modules/.bin/gulp watch",
-        "build": "azure"
+        "start": "node_modules/.bin/gulp watch"
     },
     "description": "A grayscale one page HTML theme for Bootstrap.",
     "keywords": [
