--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.9.0",
         "bootstrap": "4.3.1",
+        "caniuse-lite": "^1.0.30001078",
         "jquery": "3.5.0",
         "jquery.easing": "^1.4.1"
     },
